# web-tutorials

./: README.md
apache-httpd/: docker-compose.yaml  index.html
dash/: Dockerfile  README.md  docker-compose.yaml
dash/src/: home.py  settings.py
django/: .dockerignore  .env-sample  Dockerfile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
django-rest-framework/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
django-rest-framework/myproject/myproject/: settings.py  urls.py
django-rest-framework/myproject/myproject/foo/: views.py
django-rest-framework/myproject/snippets/: __init__.py  serializers.py  views.py
django-rest-framework/myproject/snippets/migrations/: 0001_initial.py
django/db/init/: 001_init.sh  002_some.sql
django/mysite/mysite/: settings.py
django/mysite/polls/: tests.py  views.py
django/mysite/polls/migrations/: 0001_initial.py
django/mysite/polls/templates/polls/: detail.html  index.html  results.html
envor-rate-limit/: .gitignore  NOTE.md  README.md  compose.yaml  envoy-override.yaml
envor-rate-limit/api_ext/: Dockerfile  pyproject.toml
jupyterhub/: Dockerfile  docker-compose.yaml  jupyterhub_config.py
nginx/: default.conf  docker-compose.yaml
node/: Dockerfile  docker-compose.yaml
react/: .dockerignore  Dockerfile  docker-compose.yaml
scrapy/: Dockerfile  README.md  compose.yaml  requirements.txt
selenium/: Dockerfile  compose.yaml  main.py
streamlit/: Dockerfile  docker-compose.yaml  main.py  requirements.txt
vue/: Dockerfile  docker-compose.yaml
(+28 files in other folders)
