[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
pygments = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
